--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <div class="col-lg-8 offset-lg-2">
                         <h1 class="title">
                             Nice to Meet <br>
-                            you
+                            you ya
                         </h1>
                         <div class="counter-wrap" id="countdownTwo" data-countdown="2022/12/12">
                         </div>
