Update main icon

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="row align-items-center">
                     <div class="col-6">
                         <div class="logo">
-                            <a href="#"><img src="assets/images/logo-2.png" alt="Anony"></a>
+                            <a href="#"><img src="assets/images/RG-2.png" alt="Anony"></a>
                         </div>
                     </div>
                     <div class="col-6">
