--- a/index.html
+++ b/index.html
@@ -44,10 +44,13 @@
                         <div class="social-icon">
                             <ul>
                                 <li class="title">Stay In Touch :</li>
-                                <li><a href="https://www.facebook.com/diktaktorisland/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="https://www.instagram.com/rubby_guntara/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                                <li><a href="https://www.facebook.com/diktaktorisland/" target="_blank"><i
+                                            class="fab fa-facebook-f"></i></a></li>
+                                <li><a href="https://www.instagram.com/rubby_guntara/" target="_blank"><i
+                                            class="fab fa-instagram"></i></a></li>
                                 <!-- <li><a href=""><i class="fab fa-google-plus-g"></i></a></li> -->
-                                <li><a href="https://www.linkedin.com/in/rubby-guntara-b12850107/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/rubby-guntara-b12850107/" target="_blank"><i
+                                            class="fab fa-linkedin-in"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -69,7 +72,7 @@
                             Nice to Meet <br>
                             you
                         </h1>
-                        <div class="counter-wrap" id="countdownTwo" data-countdown="2022/12/12">
+                        <div class="counter-wrap" id="countdownTwo" data-countdown="2025/01/01">
                         </div>
                         <a href="#subscibeModal" class="main-btn" data-toggle="modal">Notify Me</a>
                     </div>
